--- a/mp/css/style.css
+++ b/mp/css/style.css
@@ -1,117 +1,10 @@
 body {
-  font-size: 16px;
-  color: #fff;
-  background-color: #FF804A;
-  font-family: 'Oxygen', sans-serif;
+    color: #666666;
+    background: #fff;
+    font-family: 'Roboto', sans-serif;
 }
-#header-nav {
-  background-color: #F5F5F5;
-  border-radius: 0;
-  border: 0;
-}
-#logo-img {
-  background: url('../images/logo_large1.png') no-repeat;
-  background-color: #F5F5F5;
-  width: 150px;
-  height: 150px;
-  margin: 10px 15px 10px 0;
-}
-.navbar-brand {
-  padding-top: 25px;
-}.navbar-brand h1 { /* name */
-  font-family: 'Lora', serif;
-  text-align: center;
-  color: #557c3e;
-  font-size: 1.5em;
-  text-transform: none;
-  font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
-  margin-top: 0;
-  margin-bottom: 10;
-  line-height: .75;
-}
-.navbar-brand p{ /* name */
-  font-family: 'Lora', serif;
-  color: #557c3e;
-  font-size: 1.5em;
-  text-align: center;
-  text-transform: none;
-  font-weight: bold;
-  text-shadow: 1px 1px 1px #222;
-  margin-top: 35;
-  margin-bottom: 12;
-  line-height: .75;
-  }
-  .navbar-brand a:hover, .navbar-brand a:focus {
-  text-decoration: none;
-}#nav-list {
-  margin-top: 10px;
-}#nav-list a {
-  color: #951C49;
-  text-align: center;
-}#nav-list a:hover {
-  background: #E7E7E7;
-}
-#nav-list a span {
-  font-size: 1.8em;
-}/*#phone {
-  margin-top: 5px;
-  font-size: 1.5em;
-  text-align: right;
-  color:  #557c3e;
-}
-#phone a { 
-  text-align: right;
-  padding-bottom: 0;
-}
-#phone div { 
-  color: #557c3e;
-  text-align: right;
-  padding-right: 15px;
-}
-#phone p{
-  color: black;
-  text-align: center;
-}
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #61122f;
-}
-.navbar-header button.navbar-toggle {
-  clear: both;
-  margin-top: -30px;
-}*/
-@media (min-width: 1200px) {
-  .container .jumbotron {
-    background: url('../images/jumbotron_1200.jpg') no-repeat;
-     height: 675px;
-    }
-    @media (min-width: 992px) and (max-width: 1199px) {
-    
-  /* Header */
-  #logo-img {
-    background: url('../images/logo_medium.png') no-repeat;
-    width: 100px;
-    height: 100px;
-    margin: 5px 5px 5px 0;
-  }
- /* End Header */
-
-  /* Home Page */
-  .container .jumbotron {
-    background: url('../images/jumbotron_992.jpg') no-repeat;
-    height: 558px;
-  }
-  /* End Home Page */
-}
-
-/********** Small devices only **********/
-@media (min-width: 768px) and (max-width: 991px) {
-
-  /* Home Page */
-  .container .jumbotron {
-    background: url('../images/jumbotron_768.jpg') no-repeat;
-    height: 432px;
-  }
-   
-  /* End Home Page */
+#header {
+    padding: 25px 0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
 }
